# postern

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .style.yapf  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  compose.cert.yaml  compose.edge.yaml  compose.gateway.yaml  compose.yaml  example.env  prek.toml  renovate.json
.github/: dependabot.yaml  dependabot.yml  renovate.json
.github/workflows/: cf-contract.yaml  subrepo-pull.yaml  test.yaml
docs/: .readthedocs.yaml  certs.md  conf.py  connecting.md  edge.md  frontend.md  gateway.md  getting-started.md  index.md  mta.md  rename.md  requirements.txt  security.md
docs/deployment/: certificates.md  configuration.md  customization.md  edge.md  email.md  gateway.md  index.md
mta/: Dockerfile  entrypoint.py
nginx/: Dockerfile  edge.sh  nginx-entrypoint.sh  reload.sh  render.sh
portal/: Dockerfile  Dockerfile.dockerignore  pyproject.toml
portal/scripts/: sync-flags.sh
portal/src/postern/: app.py  auth.py  cli.py  db.py  doctor.py  ech.py  email.py  identity.py  models.py  reconciler.py  settings.py  ss_config.py
portal/src/postern/cert/: __init__.py  dns_records.py  inspect.py  state.py
portal/src/postern/mta/: __init__.py  dkim.py  dns.py  dnssec.py  rotation.py
portal/src/postern/routes/: brand_icon.py  dashboard.py  login.py
portal/src/postern/static/: postern.css  postern.js
portal/src/postern/static/flags/: flags.css
portal/src/postern/templates/: base.html  dashboard.html  login.html  otp.html
portal/src/postern_provisioner/: __init__.py  cert.py  dns_records.py  ech.py  edge_ranges.py  enablement.py  healthcheck.py  install.py  lego_env.py  mta_records.py  ssl_mode.py
portal/src/voyager/: app.py  auth.py  cli.py  db.py  email.py  reconciler.py  settings.py  ss_config.py
portal/src/voyager/routes/: dashboard.py  login.py
portal/src/voyager/templates/: base.html  dashboard.html  login.html  otp.html
portal/tests/: conftest.py  test_app.py  test_auth.py  test_cert_inspect.py  test_cert_install.py  test_cert_settings.py  test_cert_state.py  test_certs_unit.py  test_cli.py  test_cli_cert.py  test_cli_doctor.py  test_cli_ech.py  test_cli_edge.py  test_cli_mta.py  test_compose_edge.py  test_compose_gateway.py  test_compose_submission.py  test_db.py  test_dns_records.py  test_docs.py  test_doctor.py  test_ech_front.py  test_ech_settings.py  test_edge_ranges.py  test_edge_settings.py  test_email.py  test_identity.py  test_lego_env.py  test_mta_dkim.py  test_mta_dns.py  test_mta_dnssec.py  test_mta_records.py  test_mta_rotation.py  test_nginx_edge.py  test_nginx_render.py  test_nginx_template.py  test_provisioner_build.py  test_provisioner_cert_loop.py  test_provisioner_ech.py  test_provisioner_enablement.py  (+8 more)
portal/tests/e2e/: _certs.py  _edge_helpers.py  _helpers.py  _mta_helpers.py  conftest.py  e2e-edge.compose.yaml  e2e-mta-real.compose.yaml  e2e-mta.compose.yaml  e2e.compose.yaml  nginx.conf  ssclient.Dockerfile  test_edge.py  test_mta.py  test_mta_disruptive.py  test_mta_outbound.py  test_mta_real.py  test_proxy_protocol.py  test_tunnel.py  unbound.e2e-mta.conf.tmpl
portal/tests/e2e/certs/: ca.pem  fullchain.pem  privkey.pem  regen.sh
provisioner/: Dockerfile  entrypoint.py
scripts/: format-section-comments.py
shadowsocks/: Dockerfile  entrypoint.sh
(+41 files in other folders)
