[project]
name = "postern"
version = "0.1.0"
description = "Postern VPN management portal"
license = "AGPL-3.0-or-later"
license-files = []
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "aiosqlite>=0.21",
    "aiosmtplib>=3.0",
    "pydantic-settings>=2.7",
    "docker>=7.1",
    "typer>=0.15",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ty>=0.0.29",
    "yapf>=0.43",
    "asgi-lifespan>=2.1.0",
]
e2e = [
    {include-group = "dev"},
    "pytest-timeout>=2.3",
]

[project.scripts]
postern = "postern.cli:app"

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/postern"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that spin up the full compose stack (slow, requires docker; opt in with -m e2e)",
]

[tool.ty.rules]
# pydantic-settings loads fields from env at runtime; ty can't see that.
missing-argument = "ignore"
# aiosqlite.Row's subscript returns `Any | tuple[...]`, which propagates through
# `User(**dict(row))` and test fixture dicts. The DB layer validates values; the
# rule as it fires here is library-typing noise, not a real bug surface.
invalid-argument-type = "ignore"
